--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ VITE_API_KEY = "ur2373103-e66c64292a98cc1aa793d75b"
 
 # 站点信息
 VITE_SITE_NAME = "EYES"
-VITE_SITE_KEYWORDS = "站点监测,监测,监控"
-VITE_SITE_DES = "一个简约的站点监测"
+VITE_SITE_KEYWORDS = "监控"
+VITE_SITE_DES = "Status | Lockey"
 
 # ICP 备案
 ## 若不需要可不填
@@ -20,10 +20,10 @@ VITE_SITE_ICP = ""
 VITE_COUNT_DAYS = 60
 
 # GitHub 链接
-VITE_GITHUB_NAME = "imsyy"
+VITE_GITHUB_NAME = ""
 
 # 主页链接
-VITE_HOME_URL = "https://www.imsyy.top/"
+VITE_HOME_URL = "https://lkt.icu"
 
 # 邮箱地址
-VITE_EMAIL_URL = "one@imsyy.top"
+VITE_EMAIL_URL = ""
